--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
 
   cells:
@@ -7,21 +5,18 @@ services:
     restart: unless-stopped
     ports:
       - "8200:8080"
-    environment:
-      - CELLS_INSTALL_YAML=/pydio/config/install.yml
     volumes: 
       - ./cellsdir:/var/cells
-      - ./install-conf.yml:/pydio/config/install.yml:ro
+      - ./data:/var/cells/data
 
   mysql:
-    image: mariadb
+    image: mariadb:latst
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: ChangeMe!
+      MYSQL_ROOT_PASSWORD: P@ssw0rd
       MYSQL_DATABASE: cells
       MYSQL_USER: pydio
-      MYSQL_PASSWORD: ChangeMe!
+      MYSQL_PASSWORD: P@ssw0rd
+    command: [mysqld, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci]
     volumes:
       - ./mysqldir:/var/lib/mysql
-
-
